--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 BASE_URL = http://localhost/php2/lession5-using-compser-setup-project
 
 #kết nối CSDL
+DB_DRIVER = pdo_mysql
 DB_HOST = localhost 
 DB_PORT = 3306 
 DB_USERNAME = root 
 DB_PASSWORD = 
-DB_NAME = php_oop 
+DB_NAME = crudoop 
