--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
     ],
     "require": {
         "bramus/router": "~1.6",
-        "vlucas/phpdotenv": "^5.6",
-        "doctrine/dbal": "^4.0",
         "eftec/bladeone": "^4.13",
-        "rakit/validation": "^1.4"
+        "doctrine/dbal": "^4.0",
+        "rakit/validation": "^1.4",
+        "vlucas/phpdotenv": "^5.6"
+
     }
 }
